--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -9,6 +9,18 @@
     <script src="https://lib.baomitu.com/vue/2.6.11/vue.js"></script>
     <script src="https://lib.baomitu.com/axios/0.21.0/axios.min.js"></script>
     <script src="./js/lang.js"></script>
+    <script>
+      window.onload=function () {
+        var lastTouchEnd=0;
+        document.addEventListener('touchend',function (event) {
+          var now=(new Date()).getTime();
+          if(now-lastTouchEnd<=500){
+            event.preventDefault();
+          }
+          lastTouchEnd=now;
+        },false);
+      }
+    </script>
     <style>
         .privacy{
             padding: 12px;
