feat: 二维码上加协议

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,11 @@
           lastTouchEnd=now;
         },false);
       }
+      window.onpageshow = function(event) {
+          if (event.persisted) {
+              window.location.reload()
+          }
+      };
     </script>
   </head>
   <body>
