feat: 新版样式风格

--- a/public/download/index.html
+++ b/public/download/index.html
@@ -35,17 +35,17 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="./img/swi1.jpg" alt="" class="swi_img">
+                        <img src="./img/swi1.png" alt="" class="swi_img">
                         <div class="blue_title">{{langMessage[lang].title1}}</div>
                         <p>{{langMessage[lang].tip1}}</p>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/swi2.jpg" alt="" class="swi_img">
+                        <img src="./img/swi2.png" alt="" class="swi_img">
                         <div class="blue_title">{{langMessage[lang].title2}}</div>
                         <p>{{langMessage[lang].tip2}}</p>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/swi3.jpg" alt="" class="swi_img">
+                        <img src="./img/swi3.png" alt="" class="swi_img">
                         <div class="blue_title">{{langMessage[lang].title3}}</div>
                         <p>{{langMessage[lang].tip3}}</p>
                     </div>
@@ -60,7 +60,7 @@
                     <img v-show="loading1" class="loading" src="./img/loading.gif">
                 </div>
                 <div id="ios_download" class = "ios_btn ios_img" @click.stop="iosDown">
-                    <span  style="color:white">IOS {{langMessage[lang].download}} </span>
+                    <span>IOS {{langMessage[lang].download}} </span>
                     <img v-show="loading2" class="loading" src="./img/loading.gif">
                 </div>
             </div>
